updated admin html page

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -118,13 +118,6 @@ body {
 					<h2>Doctor's Registration</h2>
 					<p>Please fill in this form to create an account!</p>
 					<hr>
-					<label style="color: black">Id</label><br>
-					<div class="form-group">
-						<div>
-							<input type="text" class="form-control" name="id"
-								placeholder="Id" required="required">
-						</div>
-					</div>
 					<label style="color: black">Name</label><br>
 					<div class="form-group">
 						<div>
@@ -150,9 +143,9 @@ body {
 					</div>
 
 					<div class="form-group">
-						<label style="color: black">Is Specialist</label><br> <input
-							type="radio" id="html" value="yes"><label>Yes</label><br>
-						<input type="radio" id="html" value="no"><label>No</label>
+						<label style="color: black">Is Specialist</label><br> 
+						<input type="radio" name="Specialist" id="yesSpecialist" value="true"><label>Yes</label><br>
+						<input type="radio" name="Specialist" id="noSpecialist" value="false"><label>No</label>
 					</div>
 					<label style="color: black">Specialization</label><br>
 					<div class="form-group">
@@ -163,10 +156,10 @@ body {
 					</div>
 
 					<div class="form-group">
-						<label style="color: black">Gender</label><br> <input
-							type="radio" id="html" value="male"><label>Male</label><br>
-						<input type="radio" id="html" value="female"><label>Female</label><br>
-						<input type="radio" id="html" value="other"><label>Other</label>
+						<label style="color: black">Gender</label><br> 
+						<input type="radio" name="gender" id="html" value="male"><label>Male</label><br>
+						<input type="radio" name="gender" id="html" value="female"><label>Female</label><br>
+						<input type="radio" name="gender" id="html" value="other"><label>Other</label>
 					</div>
 
 					<label style="color: black">Experience</label><br>
@@ -205,13 +198,6 @@ body {
 					<h2>Receptionist Registration</h2>
 					<p>Please fill in this form to create an account!</p>
 					<hr>
-					<label style="color: black">Id</label><br>
-					<div class="form-group">
-						<div>
-							<input type="text" class="form-control" name="id"
-								placeholder="Id" required="required">
-						</div>
-					</div>
 					<label style="color: black">Name</label><br>
 					<div class="form-group">
 						<div>
@@ -238,9 +224,9 @@ body {
 
 					<div class="form-group">
 						<label style="color: black">Gender</label><br> <input
-							type="radio" id="html" value="male"><label>Male</label><br>
-						<input type="radio" id="html" value="female"><label>Female</label><br>
-						<input type="radio" id="html" value="other"><label>Other</label>
+							type="radio" name="gender" id="html" value="male"><label>Male</label><br>
+						<input type="radio" name="gender" id="html" value="female"><label>Female</label><br>
+						<input type="radio" name="gender" id="html" value="other"><label>Other</label>
 					</div>
 
 					<div class="form-group">
