doctor save logic

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -52,7 +52,7 @@
 					<label style="color: black">Date Of Birth</label><br>
 					<div class="form-group">
 						<div>
-							<input type="date" class="form-control" name="dob">
+							<input type="date" class="form-control" id="docDob" name="dob">
 						</div>
 					</div>
 
