--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -44,6 +44,8 @@ function patLogin(){
 		password.classList.add("is-invalid");
 	}
 	
+	document.forms['patForm'].reset();
+	
 }
 function docLogin(){
 	
@@ -66,6 +68,7 @@ function docLogin(){
 	}else{
 		password.classList.add("is-invalid");
 	}
+	document.forms['docForm'].reset();
 	
 }
 function resLogin(){
@@ -89,6 +92,7 @@ function resLogin(){
 	}else{
 		password.classList.add("is-invalid");
 	}
+	document.forms['resForm'].reset();
 	
 }
 
@@ -109,7 +113,7 @@ function resLogin(){
       
         <div id="patDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: block;" >
           <div class="card-body p-5 text-center">
-          <form action="javascript:void(0)" onsubmit="patLogin()">
+          <form name="patForm" action="javascript:void(0)" onsubmit="patLogin()">
           	
 
             <h3 >Patient's Sign in Page</h3>
@@ -161,7 +165,7 @@ function resLogin(){
         
         <div id="docDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: none;">
           <div class="card-body p-5 text-center">
-          	<form action="javascript:void(0)" onsubmit="docLogin()">
+          	<form name="docForm" action="javascript:void(0)" onsubmit="docLogin()">
 
             <h3 >Doctor's Sign in Page</h3>
             <h6 class="mb-5">Please Enter your Email and Password Login</h6>
@@ -214,7 +218,7 @@ function resLogin(){
         
         <div id="resDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: none;">
           <div class="card-body p-5 text-center">
-          	<form action="javascript:void(0)" onsubmit="resLogin()">
+          	<form name="resForm" action="javascript:void(0)" onsubmit="resLogin()">
 
             <h3 >Receptionist's Sign in Page</h3>
             <h6 class="mb-5">Please Enter your Email and Password Login</h6>
