login page update

--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -120,7 +120,7 @@ function resLogin(){
             <h6 class="mb-5">Please Enter your Email and Password Login</h6>
 
             <div class="form-outline mb-2">
-            	<label class="form-label" for="typeEmailX-1" for="validationServer01">Email</label>
+            	<label class="form-label" for="typeEmailX-1" >Email</label>
               	<input type="email" id="typeEmailX-1" class="form-control form-control-rg is-invalid" placeholder="Email" required="required"/>
               	<div id="validationServer01Feedback" class="invalid-feedback">
 			      Please provide a valid email.
@@ -129,7 +129,7 @@ function resLogin(){
             </div>
 
             <div class="form-outline mb-4">
-            	<label class="form-label" for="typePasswordX-1" for="validationServer02">Password</label>
+            	<label class="form-label" for="typePasswordX-1" >Password</label>
               	<input type="password" id="typePasswordX-1" class="form-control form-control-rg is-invalid" placeholder="Password" required="required"/>
 	              	<div id="validationServer02Feedback" class="invalid-feedback">
 				      Please provide a valid password.
@@ -171,7 +171,7 @@ function resLogin(){
             <h6 class="mb-5">Please Enter your Email and Password Login</h6>
 
             <div class="form-outline mb-2">
-            	<label class="form-label" for="typeEmailX-2" for="validationServer03">Email</label>
+            	<label class="form-label" for="typeEmailX-2" >Email</label>
               	<input type="email" id="typeEmailX-2" class="form-control form-control-rg is-invalid" placeholder="Email" required="required"/>
               	<div id="validationServer03Feedback" class="invalid-feedback">
 			      Please provide a valid email.
@@ -224,7 +224,7 @@ function resLogin(){
             <h6 class="mb-5">Please Enter your Email and Password Login</h6>
 
             <div class="form-outline mb-2">
-            	<label class="form-label" for="typeEmailX-3" for="validationServer03">Email</label>
+            	<label class="form-label" for="typeEmailX-3" >Email</label>
               	<input type="email" id="typeEmailX-3" class="form-control form-control-rg is-invalid" placeholder="Email" required="required"/>
               	<div id="validationServer03Feedback" class="invalid-feedback">
 			      Please provide a valid email.
