--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -57,14 +57,16 @@
 					</div>
 
 					<div class="form-group">
-						<label style="color: black">Is Specialist</label><br> 
-						<input type="radio" name="Specialist" id="IsASpecialist" value="true"><label>Yes</label><br>
-						<input type="radio" name="Specialist" id="IsASpecialist" value="false"><label>No</label>
+						<label style="color: black">Is Specialist</label><br> <input
+							type="radio" name="Specialist" id="IsASpecialist" value="true"><label>Yes</label><br>
+						<input type="radio" name="Specialist" id="IsASpecialist"
+							value="false"><label>No</label>
 					</div>
 					<label style="color: black">Specialization</label><br>
 					<div class="form-group">
 						<div>
-							<select class="form-control" name="specialization" id="docSpecialization">
+							<select class="form-control" name="specialization"
+								id="docSpecialization">
 								<option value="Anesthesiologists">Anesthesiologists</option>
 								<option value="Cardiologists">Cardiologists</option>
 								<option value="Neurologists">Neurologists</option>
@@ -73,11 +75,15 @@
 						</div>
 					</div>
 
+					<label style="color: black">Gender</label><br>
 					<div class="form-group">
-						<label style="color: black">Gender</label><br> <input
-							type="radio" name="gender" id="docGender" value="male"><label>Male</label><br>
-						<input type="radio" name="gender" id="docGender" value="female"><label>Female</label><br>
-						<input type="radio" name="gender" id="docGender" value="other"><label>Other</label>
+						<div>
+							<select class="form-control" name="gender" id="docGender">
+								<option value="male">Male</option>
+								<option value="female">Female</option>
+								<option value="other">Other</option>
+							</select>
+						</div>
 					</div>
 
 					<label style="color: black">Experience</label><br>
@@ -119,7 +125,8 @@
 		</div>
 		<div class="col">
 			<div class="signup-form">
-				<form name="form1" action="javascript:void(0)" onsubmit="onRecepRegister()">
+				<form name="form1" action="javascript:void(0)"
+					onsubmit="onRecepRegister()">
 					<h2>Receptionist Registration</h2>
 					<p>Please fill in this form to create an account!</p>
 					<hr>
@@ -151,15 +158,19 @@
 					<label style="color: black">Date Of Birth</label><br>
 					<div class="form-group">
 						<div>
-							<input type="date" class="form-control" name="dob">
+							<input type="date" id="recepDob" class="form-control" name="dob">
 						</div>
 					</div>
 
+					<label style="color: black">Gender</label><br>
 					<div class="form-group">
-						<label style="color: black">Gender</label><br> <input
-							type="radio" name="gender" id="html" value="male"><label>Male</label><br>
-						<input type="radio" name="gender" id="html" value="female"><label>Female</label><br>
-						<input type="radio" name="gender" id="html" value="other"><label>Other</label>
+						<div>
+							<select class="form-control" name="gender" id="recepGender">
+								<option value="male">Male</option>
+								<option value="female">Female</option>
+								<option value="other">Other</option>
+							</select>
+						</div>
 					</div>
 
 					<div class="form-group">
@@ -170,6 +181,8 @@
 			</div>
 		</div>
 	</div>
+	<script type="module" src="../static/PostData.js"
+		th:src="@{/PostData.js}"></script>
 	<script type="text/javascript" src="../static/mainjs.js"
 		th:src="@{/mainjs.js}">
 		
