--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -6,98 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<script>
-function docDisFunction(){
-    document.getElementById("docDIV").style.display = "block";
-    document.getElementById("patDIV").style.display = "none";
-    document.getElementById("resDIV").style.display = "none";
-}
-function patDisFunction(){
-    document.getElementById("patDIV").style.display = "block";
-    document.getElementById("docDIV").style.display = "none";
-    document.getElementById("resDIV").style.display = "none";
-}
-function resDisFunction(){
-    document.getElementById("resDIV").style.display = "block";
-    document.getElementById("docDIV").style.display = "none";
-    document.getElementById("patDIV").style.display = "none";
-}
-function patLogin(){
-	
-	var email = document.getElementById("typeEmailX-1");
-	var password = document.getElementById("typePasswordX-1");
-	
-	var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
-	if(email.value.match(mailformat))
-	{
-		email.classList.remove("is-invalid");
-	}else{
-		email.classList.add("is-invalid");
-	}
-		
-	
-	var decimal=  /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{6,20}$/;
-	if(password.value.match(decimal)) 
-	{
-		password.classList.remove("is-invalid");
-	}else{
-		password.classList.add("is-invalid");
-	}
-	
-	document.forms['patForm'].reset();
-	
-}
-function docLogin(){
-	
-	var email = document.getElementById("typeEmailX-2");
-	var password = document.getElementById("typePasswordX-2");
-	
-	var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
-	if(email.value.match(mailformat))
-	{
-		email.classList.remove("is-invalid");
-	}else{
-		email.classList.add("is-invalid");
-	}
-		
-	
-	var decimal=  /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{6,20}$/;
-	if(password.value.match(decimal)) 
-	{
-		password.classList.remove("is-invalid");
-	}else{
-		password.classList.add("is-invalid");
-	}
-	document.forms['docForm'].reset();
-	
-}
-function resLogin(){
-	
-	var email = document.getElementById("typeEmailX-3");
-	var password = document.getElementById("typePasswordX-3");
-	
-	var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
-	if(email.value.match(mailformat))
-	{
-		email.classList.remove("is-invalid");
-	}else{
-		email.classList.add("is-invalid");
-	}
-		
-	
-	var decimal=  /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{6,20}$/;
-	if(password.value.match(decimal)) 
-	{
-		password.classList.remove("is-invalid");
-	}else{
-		password.classList.add("is-invalid");
-	}
-	document.forms['resForm'].reset();
-	
-}
-
-
-</script>
 
 <title>Login Page</title>
 </head>
@@ -121,7 +29,7 @@ function resLogin(){
 
             <div class="form-outline mb-2">
             	<label class="form-label" for="typeEmailX-1" >Email</label>
-              	<input type="email" id="typeEmailX-1" class="form-control form-control-rg is-invalid" placeholder="Email" required="required"/>
+              	<input type="email" id="typeEmailX-1" class="form-control form-control-rg" placeholder="Email" required="required"/>
               	<div id="validationServer01Feedback" class="invalid-feedback">
 			      Please provide a valid email.
 			    </div>
@@ -130,7 +38,7 @@ function resLogin(){
 
             <div class="form-outline mb-4">
             	<label class="form-label" for="typePasswordX-1" >Password</label>
-              	<input type="password" id="typePasswordX-1" class="form-control form-control-rg is-invalid" placeholder="Password" required="required"/>
+              	<input type="password" id="typePasswordX-1" class="form-control form-control-rg" placeholder="Password" required="required"/>
 	              	<div id="validationServer02Feedback" class="invalid-feedback">
 				      Please provide a valid password.
 				    </div>
@@ -172,7 +80,7 @@ function resLogin(){
 
             <div class="form-outline mb-2">
             	<label class="form-label" for="typeEmailX-2" >Email</label>
-              	<input type="email" id="typeEmailX-2" class="form-control form-control-rg is-invalid" placeholder="Email" required="required"/>
+              	<input type="email" id="typeEmailX-2" class="form-control form-control-rg" placeholder="Email" required="required"/>
               	<div id="validationServer03Feedback" class="invalid-feedback">
 			      Please provide a valid email.
 			    </div>
@@ -181,7 +89,7 @@ function resLogin(){
 
             <div class="form-outline mb-4">
             	<label class="form-label" for="typePasswordX-2" >Password</label>
-              	<input type="password" id="typePasswordX-2" class="form-control form-control-rg is-invalid" placeholder="Password" required="required"/>
+              	<input type="password" id="typePasswordX-2" class="form-control form-control-rg" placeholder="Password" required="required"/>
               	<div id="validationServer04Feedback" class="invalid-feedback">
 			      Please provide a valid password.
 			    </div>
@@ -225,7 +133,7 @@ function resLogin(){
 
             <div class="form-outline mb-2">
             	<label class="form-label" for="typeEmailX-3" >Email</label>
-              	<input type="email" id="typeEmailX-3" class="form-control form-control-rg is-invalid" placeholder="Email" required="required"/>
+              	<input type="email" id="typeEmailX-3" class="form-control form-control-rg" placeholder="Email" required="required"/>
               	<div id="validationServer03Feedback" class="invalid-feedback">
 			      Please provide a valid email.
 			    </div>
@@ -234,7 +142,7 @@ function resLogin(){
 
             <div class="form-outline mb-4">
             	<label class="form-label" for="typePasswordX-3" >Password</label>
-              	<input type="password" id="typePasswordX-3" class="form-control form-control-rg is-invalid" placeholder="Password" required="required"/>
+              	<input type="password" id="typePasswordX-3" class="form-control form-control-rg" placeholder="Password" required="required"/>
               	<div id="validationServer04Feedback" class="invalid-feedback">
 			      Please provide a valid password.
 			    </div>
@@ -271,6 +179,11 @@ function resLogin(){
     </div>
   </div>
 </section>
+
+	<script type="text/javascript" src="../static/mainjs.js"
+		th:src="@{/mainjs.js}">
+		
+	</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
