--- a/src/main/resources/templates/patientregistration.html
+++ b/src/main/resources/templates/patientregistration.html
@@ -50,15 +50,19 @@
 					<label style="color: black">Date Of Birth</label><br>
 					<div class="form-group">
 						<div>
-							<input type="date" class="form-control" name="dob">
+							<input type="date" class="form-control" id="patDob" name="dob">
 						</div>
 					</div>
 
+					<label style="color: black">Gender</label><br>
 					<div class="form-group">
-						<label style="color: black">Gender</label><br> <input
-							type="radio" name="gender" id="html" value="male"><label>Male</label><br>
-						<input type="radio" name="gender" id="html" value="female"><label>Female</label><br>
-						<input type="radio" name="gender" id="html" value="other"><label>Other</label>
+						<div>
+							<select class="form-control" name="gender" id="patGender">
+								<option value="male">Male</option>
+								<option value="female">Female</option>
+								<option value="other">Other</option>
+							</select>
+						</div>
 					</div>
 
 					<div class="form-group">
@@ -68,7 +72,6 @@
 				</form>
 			</div>
 		</div>
-	</div>
 	<script type="text/javascript" src="../static/mainjs.js"
 		th:src="@{/mainjs.js}">
 		
@@ -86,5 +89,5 @@
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
 		crossorigin="anonymous"></script>
 </body>
-	
+</html>	
 				
