--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -117,7 +117,7 @@ function resLogin(){
           	
 
             <h3 >Patient's Sign in Page</h3>
-            <h6 class="mb-5">Please Enter your Email and Password Login</h6>
+            <h6 class="mb-5">Please Enter your Email and Password to Login</h6>
 
             <div class="form-outline mb-2">
             	<label class="form-label" for="typeEmailX-1" >Email</label>
@@ -168,7 +168,7 @@ function resLogin(){
           	<form name="docForm" action="javascript:void(0)" onsubmit="docLogin()">
 
             <h3 >Doctor's Sign in Page</h3>
-            <h6 class="mb-5">Please Enter your Email and Password Login</h6>
+            <h6 class="mb-5">Please Enter your Email and Password to Login</h6>
 
             <div class="form-outline mb-2">
             	<label class="form-label" for="typeEmailX-2" >Email</label>
