--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,54 +2,39 @@
 <html lang="en" dir="ltr">
 
 <head>
-<meta charset="UTF-8">
-<title>Responsiive Admin Dashboard | CodingLab</title>
-<link rel="stylesheet" href="../static/style2.css"
-	th:href="@{/style2.css}">
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
-	rel='stylesheet'>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<title>Responsiive Admin Dashboard | CodingLab</title>
+	<link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
+	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	
+
+		<script src="https://kit.fontawesome.com/b496fc4e58.js" crossorigin="anonymous"></script>
+
+	<style>
+		.home-content .overview-boxes {
+			justify-content: flex-start;
+			gap: 24px;
+		}
+	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
-			<i class='bx bxl-c-plus-plus'></i> <span class="logo_name">CodingLab</span>
+			<i class='bx bx-plus-medical'></i> <span class="logo_name">PASS APP</span>
 		</div>
 		<ul class="nav-links">
 			<li><a href="#" class="active"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-box'></i> <span
-					class="links_name">Product</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-list-ul'></i> <span
-					class="links_name">Order list</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-pie-chart-alt-2'></i> <span
-					class="links_name">Analytics</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-coin-stack'></i> <span
-					class="links_name">Stock</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-book-alt'></i> <span
-					class="links_name">Total order</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-user'></i> <span
-					class="links_name">Team</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-message'></i> <span
-					class="links_name">Messages</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-heart'></i> <span
-					class="links_name">Favrorites</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-cog'></i> <span
-					class="links_name">Setting</span>
-			</a></li>
+				</a></li>
+			<li><a th:href="@{admin/register}"> <i class='bx bx-box'></i>Registration <span class="links_name"></span>
+				</a></li>
 			<li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
 					<span class="links_name">Log out</span>
-			</a></li>
+				</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -57,13 +42,12 @@
 			<div class="sidebar-button">
 				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
 			</div>
-			<div class="search-box">
+			<!-- <div class="search-box">
 				<input type="text" placeholder="Search..."> <i
 					class='bx bx-search'></i>
-			</div>
+			</div> -->
 			<div class="profile-details">
-				<img src="images/profile.jpg" alt=""> <span class="admin_name">Prem
-					Shahi</span> <i class='bx bx-chevron-down'></i>
+				<img src="static/images/profile.jpg" alt=""> <span class="admin_name">Admin</span> <i></i>
 			</div>
 		</nav>
 
@@ -71,55 +55,33 @@
 			<div class="overview-boxes">
 				<div class="box">
 					<div class="right-side">
-						<div class="box-topic">Total Order</div>
-						<div class="number">40,876</div>
-						<div class="indicator">
+						<div class="box-topic">Total Doctors</div>
+						<div class="number">500</div>
+						<!-- <div class="indicator">
 							<i class='bx bx-up-arrow-alt'></i> <span class="text">Up
 								from yesterday</span>
-						</div>
+						</div> -->
 					</div>
-					<i class='bx bx-cart-alt cart'></i>
+					<!-- <i class='bx bx-cart-alt cart'></i> -->
 				</div>
 				<div class="box">
 					<div class="right-side">
-						<div class="box-topic">Total Sales</div>
+						<div class="box-topic">Confirm Appointments</div>
 						<div class="number">38,876</div>
-						<div class="indicator">
+						<!-- <div class="indicator">
 							<i class='bx bx-up-arrow-alt'></i> <span class="text">Up
 								from yesterday</span>
-						</div>
+						</div> -->
 					</div>
-					<i class='bx bxs-cart-add cart two'></i>
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Profit</div>
-						<div class="number">$12,876</div>
-						<div class="indicator">
-							<i class='bx bx-up-arrow-alt'></i> <span class="text">Up
-								from yesterday</span>
-						</div>
-					</div>
-					<i class='bx bx-cart cart three'></i>
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Return</div>
-						<div class="number">11,086</div>
-						<div class="indicator">
-							<i class='bx bx-down-arrow-alt down'></i> <span class="text">Down
-								From Today</span>
-						</div>
-					</div>
-					<i class='bx bxs-cart-download cart four'></i>
+					<!-- <i class='bx bxs-cart-add cart two'></i> -->
 				</div>
 			</div>
 
 			<div class="sales-boxes">
 				<div class="recent-sales box">
-					<div class="title">Recent Sales</div>
+					<div class="title">Recent Appointments</div>
 					<div class="sales-details">
-						<ul class="details">
+						<!-- <ul class="details">
 							<li class="topic">Date</li>
 							<li><a href="#">02 Jan 2021</a></li>
 							<li><a href="#">02 Jan 2021</a></li>
@@ -164,39 +126,22 @@
 							<li><a href="#">$67.33</a></li>
 							<li><a href="#">$23.53</a></li>
 							<li><a href="#">$46.52</a></li>
-						</ul>
+						</ul> -->
 					</div>
 					<div class="button">
 						<a href="#">See All</a>
 					</div>
 				</div>
 				<div class="top-sales box">
-					<div class="title">Top Seling Product</div>
+
+					<div class="title">Top Doctors</div>
 					<ul class="top-sales-details">
-						<li><a href="#"> <img src="images/sunglasses.jpg" alt="">
-								<span class="product">Vuitton Sunglasses</span>
-						</a> <span class="price">$1107</span></li>
-						<li><a href="#"> <img src="images/jeans.jpg" alt="">
-								<span class="product">Hourglass Jeans </span>
-						</a> <span class="price">$1567</span></li>
-						<li><a href="#"> <img src="images/nike.jpg" alt="">
-								<span class="product">Nike Sport Shoe</span>
-						</a> <span class="price">$1234</span></li>
-						<li><a href="#"> <img src="images/scarves.jpg" alt="">
-								<span class="product">Hermes Silk Scarves.</span>
-						</a> <span class="price">$2312</span></li>
-						<li><a href="#"> <img src="images/blueBag.jpg" alt="">
-								<span class="product">Succi Ladies Bag</span>
-						</a> <span class="price">$1456</span></li>
-						<li><a href="#"> <img src="images/bag.jpg" alt="">
-								<span class="product">Gucci Womens's Bags</span>
-						</a> <span class="price">$2345</span>
-						<li><a href="#"> <img src="images/addidas.jpg" alt="">
-								<span class="product">Addidas Running Shoe</span>
-						</a> <span class="price">$2345</span></li>
-						<li><a href="#"> <img src="images/shirt.jpg" alt="">
-								<span class="product">Bilack Wear's Shirt</span>
-						</a> <span class="price">$1245</span></li>
+						<li><a href="#"><img src="https://img.icons8.com/office/40/000000/administrator-male--v1.png"/>
+								<span class="product">Dr Gulati</span>
+							</a> <span class="price">Active</span></li>
+						<li><a href="#"><i class="fa-solid fa-user-tie-hair-long"></i>
+								<span class="product">Dr Nidhi</span>
+							</a> <span class="price">In-Active</span></li>
 					</ul>
 				</div>
 			</div>
@@ -206,7 +151,7 @@
 	<script>
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function() {
+		sidebarBtn.onclick = function () {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -214,7 +159,11 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
 
+		
 </body>
 
 </html>
