--- a/src/main/resources/templates/adminRegistration.html
+++ b/src/main/resources/templates/adminRegistration.html
@@ -6,6 +6,7 @@
     <title>Responsiive Admin Dashboard | CodingLab</title>
     <link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
     <link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
+    <link rel="stylesheet" href="../static/fontawesome" th:href="@{/fontawesome}">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -18,6 +19,12 @@
             justify-content: flex-start;
             gap: 24px;
         }
+        .home-content .sales-boxes .recent-sales{
+        	width:50%;
+        }
+         .home-content .sales-boxes .top-sales{
+        	width:50%;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -28,7 +35,7 @@
             <i class='bx bx-plus-medical'></i> <span class="logo_name">PASS APP</span>
         </div>
         <ul class="nav-links">
-            <li><a th:href="@{/}"> <i class='bx bx-grid-alt'></i>
+            <li><a th:href="@{/admin}"> <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Dashboard</span>
                 </a></li>
             <li><a href="#" class="active"> <i class='bx bx-box'></i> <span class="links_name">Registration</span>
@@ -242,7 +249,9 @@
             </div>
         </div>
     </section>
-
+	<script type="text/javascript" src="../static/mainjs.js"
+		th:src="@{/mainjs.js}">
+		</script>
     <script>
         let sidebar = document.querySelector(".sidebar");
         let sidebarBtn = document.querySelector(".sidebarBtn");
