--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Admin Home</title>
+<title>Doctor Home</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -66,7 +66,7 @@
 			</div> -->
 			<div class="profile-details">
 				<img src="static/images/profile.jpg" alt=""> <span
-					class="admin_name">Admin</span> <i></i>
+					class="admin_name">Dr Gulati</span> <i></i>
 			</div>
 		</nav>
 
