updated code for stylecss

--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -110,7 +110,7 @@
 
 					<div class="title">Top Doctors</div>
 					<ul class="top-sales-details">
-						<li>
+						<li><i class="fa-solid fa-user-doctor"></i>
 								<span class="product">Dr Gulati</span> </a> <span class="price">Active</span></li>
 						<li><a href="#">
 								<span class="product">Dr Nidhi</span> </a> <span class="price">In-Active</span></li>
