index page updated

--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -98,20 +98,19 @@
 					</div>
 				</div>
 				<div class="top-sales box">
-				
-				<div class="title">Patient List</div>
-					<ul class="top-sales-details">
-						<li><i class="fa-solid fa-user-doctor"></i>
-								<span class="product">Dr Gulati</span> </a> <span class="price">Active</span></li>
-						<li><a href="#">
 
-								<span class="product">Dr Nidhi</span> </a> <span class="price">In-Active</span></li>
-				
+					<div class="title">Patient List</div>
+					<ul class="top-sales-details">
+						<li><i class="fa-solid fa-user-doctor"></i> <span
+							class="product">Dr Gulati</span> </a> <span class="price">Active</span></li>
+						<li><a href="#"> <span class="product">Dr Nidhi</span>
+						</a> <span class="price">In-Active</span></li>
+
 
 					</ul>
 				</div>
 
-					<!-- <div class="title">Top Doctors</div>
+				<!-- <div class="title">Top Doctors</div>
 					<ul class="top-sales-details">
 						<li><span class="product">Dr Gulati</span> </a> <span
 							class="price"><div class="form-check form-switch">
