--- a/src/main/resources/templates/patientprescription.html
+++ b/src/main/resources/templates/patientprescription.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Receptionist Dashboard</title>
+<title>Patient Prescription</title>
 <link rel="stylesheet" href="../static/style2.css"
 	th:href="@{/style2.css}">
 <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
@@ -37,19 +37,13 @@
 					class="links_name"> Print Reciept</span>
 			</a></li>
 			<li><a href="#"> <i class='bx bx-coin-stack'></i> <span
-					class="links_name">Stock</span>
+					class="links_name">Specialization</span>
 			</a></li>
 			<li><a href="#"> <i class='bx bx-book-alt'></i> <span
-					class="links_name">Total order</span>
+					class="links_name">Prescriptions</span>
 			</a></li>
 			<li><a href="#"> <i class='bx bx-user'></i> <span
-					class="links_name">Team</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-message'></i> <span
-					class="links_name">Messages</span>
-			</a></li>
-			<li><a href="#"> <i class='bx bx-heart'></i> <span
-					class="links_name">Favrorites</span>
+					class="links_name">Delayed</span>
 			</a></li>
 			<li><a href="#"> <i class='bx bx-cog'></i> <span
 					class="links_name">Setting</span>
@@ -112,7 +106,7 @@
 
 			<div class="sales-boxes">
 				<div class="recent-sales box">
-					<div class="title">Appointments for the day</div>
+					<div class="title">Prescription of Patient</div>
 					<div class="sales-details">
 						<ul class="details">
 							<li class="topic">Date</li>
@@ -127,7 +121,7 @@
 							<li><a href="#">02 Jan 2021</a></li>
 						</ul>
 						<ul class="details">
-							<li class="topic">Doctor Name</li>
+							<li class="topic">Patient Name</li>
 							<li><a href="#">Alex Doe</a></li>
 							<li><a href="#">David Mart</a></li>
 							<li><a href="#">Roe Parter</a></li>
@@ -139,7 +133,7 @@
 							<li><a href="#">Tiana Loths</a></li>
 						</ul>
 						<ul class="details">
-							<li class="topic">Number of Patient Visited</li>
+							<li class="topic">Prescription </li>
 							<li><a href="#">6</a></li>
 							<li><a href="#">4</a></li>
 							<li><a href="#">9</a></li>
