--- a/src/main/resources/static/patientDash.css
+++ b/src/main/resources/static/patientDash.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+ol,ul{
+	padding-left:0 !important;
+}
 .sidebar{
   position: fixed;
   height: 100%;
@@ -56,7 +59,7 @@
   background: #081D45;
 }
 .sidebar .nav-links li i{
-  /* min-width: 60px; */
+  min-width: 60px;
   text-align: center;
   font-size: 18px;
   color: #fff;
