--- a/src/main/resources/templates/patientBookAppointment.html
+++ b/src/main/resources/templates/patientBookAppointment.html
@@ -19,17 +19,17 @@
                 <i class='bx bx-plus-medical'></i> <span class="logo_name">PASS App</span>
             </div>
             <ul class="nav-links">
-                <li><a href="patientDashboard.html"  > <i class='bx bx-grid-alt'></i>
+                <li><a th:href="@{/patient}" > <i class='bx bx-grid-alt'></i>
                         <span class="links_name">Dashboard</span>
                 </a></li>
-                <li><a href="patientBookAppointment.html" class="active" > <i class='bx bx-user'></i> <span
-                    class="links_name">Book Appointment</span>
+                <li><a th:href="@{/patient/patientBookAppointment}" class="active" > <i class='bx bx-user'></i> 
+                	<span class="links_name">Book Appointment</span>
                 </a></li>
-                <li><a href="patientTotalAppointment.html" > <i class='bx bx-book-alt'></i> <span
-                        class="links_name">Total Appointments</span>
+                <li><a th:href="@{/patient/patientTotalAppointment}" > <i class='bx bx-book-alt'></i> 
+                	<span class="links_name">Total Appointments</span>
                 </a></li>
-                <li><a href="patientReview.html"> <i class='bx bx-message'></i> <span
-                        class="links_name">Review</span>
+                <li><a th:href="@{/patient/patientReview}"> <i class='bx bx-message'></i> 
+                	<span class="links_name">Review</span>
                 </a></li>
                 <li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
                         <span class="links_name">Log out</span>
@@ -39,19 +39,21 @@
         <section class="home-section">
             <nav>
                 <div id="sidebutton" class="sidebar-button">
-                    <i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Book Appointment</span>
+                    <i class='bx bx-menu sidebarBtn'></i> 
+                    <span class="dashboard">Review</span>
                 </div>
                 <div class="search-box">
-                    <input type="text" placeholder="Search..."> <i
-                        class='bx bx-search'></i>
+                    <input type="text" placeholder="Search..."> 
+                    <i class='bx bx-search'></i>
                 </div>
                 <div class="profile-details">
-                    <img src="image/Aasaf.jpg" alt=""> <span class="admin_name">Prem
-                        Shahi</span> <i class='bx bx-chevron-down'></i>
+                    <img src="../images/profile.jpg" alt=""> 
+                    <span class="admin_name">Prem Shahi</span> 
+                    <i class='bx bx-chevron-down'></i>
                 </div>
             </nav>
 
-            <div id="appoBook" class="home-content"">
+            <div id="appoBook" class="home-content">
                 <div class="patientAppo">
                     <div class="signup-form">
                     <form name="form2" action="javascript:void(0)" onsubmit="onPatRegister()">
