Changes in html and css

--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -42,13 +42,13 @@
 			<li><a href="#" class="active"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
 			</a></li>
-			<li><a th:href="@{admin/register}"> <i class='bx bx-box'></i>Appointment
+			<li><a > <i class='bx bx-box'></i>Appointment
 					List <span class="links_name"></span>
 			</a></li>
-			<li><a th:href="@{admin/register}"> <i class='bx bx-box'></i>Patient
+			<li><a > <i class='bx bx-box'></i>Patient
 					List <span class="links_name"></span>
 			</a></li>
-			<li><a th:href="@{admin/register}"> <i class='bx bx-box'></i>Profile
+			<li><a > <i class='bx bx-box'></i>Profile
 					<span class="links_name"></span>
 			</a></li>
 			<li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
