--- a/src/main/resources/templates/patientregistration.html
+++ b/src/main/resources/templates/patientregistration.html
@@ -12,6 +12,8 @@
 
 <link rel="stylesheet" href="../static/style.css"
 	th:href="@{/style.css}">
+	<link rel="stylesheet" href="../static/homeStyle.css"
+	th:href="@{/homeStyle.css}">
 
 <title>Patient Registration Form</title>
 </head>
