--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="ISO-8859-1">
-
+<link rel="stylesheet" href="../static/homeStyle.css"
+	th:href="@{/homeStyle.css}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,10 +14,25 @@
 </head>
 
 <body>
+	<nav>
+		<div class="navbar">
+			<div class="logo">
+				<i
+					style="font-size: 28px; font-weight: 500; color: #fff; min-width: 60px; text-align: center;"
+					class='bx bx-plus-medical'></i><a href="#">PASS APP</a>
+			</div>
+			<ul class="nav-links">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+			
+		</div>
+	</nav>
 
 
-
-  <section class="vh-100" style="background-color: #508bfc;">
+  <section class="vh-100" style="background-color: #4070f4;">
     <div id="myDIV" class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
