--- a/src/main/resources/templates/patientDashboard.html
+++ b/src/main/resources/templates/patientDashboard.html
@@ -8,10 +8,17 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous">
             <link rel="stylesheet" href="../static/patientDash.css" th:href="@{/patientDash.css}">
-		<!-- <link rel="stylesheet" href="style2.css" th:href="@{style2.css}"> -->
+		<link rel="stylesheet" href="style2.css" th:href="@{style2.css}"> 
         <!-- <link rel="stylesheet" href="style.css"th:href="@{style.css}"> -->
 		<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+<style>
+.home-content .overview-boxes {
+	justify-content: flex-start;
+	gap: 24px;
+}
+</style>
 	</head>
 	<body>
 		<div class="sidebar">
@@ -52,38 +59,37 @@
                     <i class='bx bx-chevron-down'></i>
                 </div>
             </nav>
-
-            <div id="dash" class="home-content" style="display: block;">
-                <div class="overview-boxes">
-                    <div class="box">
-                        <div class="right-side">
-                            <div class="box-topic">Total No. of Appointments Booked uptill now.</div>
-                            <div class="number">876</div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="right-side">
-                            <div class="box-topic">No. of Family Member you have registerd</div>
-                            <div class="number">8</div>
-                        </div>
-                    </div>
-                    <!-- <div class="box">
-                        <div class="right-side">
-                            <div class="box-topic">Total money wasted for the treatment</div>
-                            <div class="number">Rs.1,12,876</div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="right-side">
-                            <div class="box-topic">Total money Saved from the treatment</div>
-                            <div class="number">Rs.1</div>
-                        </div>
-                    </div> -->
-                </div>
+			
+			<div class="home-content">
+			<div class="overview-boxes">
+				<div class="box">
+					<div class="right-side">
+						<div class="box-topic">Total Appointments Booked</div>
+						<div class="number">876</div>
+						<!-- <div class="indicator">
+							<i class='bx bx-up-arrow-alt'></i> <span class="text">Up
+								from yesterday</span>
+						</div> -->
+					</div>
+					<!-- <i class='bx bx-cart-alt cart'></i> -->
+				</div>
+				<div class="box">
+					<div class="right-side">
+						<div class="box-topic">Family Member Registered</div>
+						<div class="number">8</div>
+						<!-- <div class="indicator">
+							<i class='bx bx-up-arrow-alt'></i> <span class="text">Up
+								from yesterday</span>
+						</div> -->
+					</div>
+					<!-- <i class='bx bxs-cart-add cart two'></i> -->
+				</div>
+			</div>
+            
 
                 <div class="sales-boxes">
                     <div class="recent-sales box">
-                        <div class="title">Recent Appontments Booked</div>
+                        <div class="title">Recent Appointments Booked</div>
                         <div class="sales-details">
                             <table class="details" >
                                 <tr onsubmit="addRowHandlers()">
