--- a/src/main/resources/templates/adminRegistration.html
+++ b/src/main/resources/templates/adminRegistration.html
@@ -64,9 +64,10 @@
 			<li><a href="#"> <i class='bx bx-cog'></i> <span
 					class="links_name">Setting</span>
 			</a></li> -->
-            <li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
-                    <span class="links_name">Log out</span>
-                </a></li>
+            <li class="log_out"><button
+					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
+					class="links_name" onclick="logout()">Log out</button> <i
+				style="min-width: 33px;" class='bx bx-log-out'></i></li>
         </ul>
     </div>
     <section class="home-section">
