--- a/src/main/resources/templates/patientReview.html
+++ b/src/main/resources/templates/patientReview.html
@@ -31,9 +31,10 @@
                 <li><a th:href="@{/patient/patientReview}" class="active"> <i class='bx bx-message'></i> 
                 	<span class="links_name">Review</span>
                 </a></li>
-                <li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
-                        <span class="links_name">Log out</span>
-                </a></li>
+                <li class="log_out"><button
+					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
+					class="links_name" onclick="logout()">Log out</button> <i
+				style="min-width: 33px;" class='bx bx-log-out'></i></li>
             </ul>
         </div>
         <section class="home-section">
