--- a/src/main/resources/templates/patientTotalAppointment.html
+++ b/src/main/resources/templates/patientTotalAppointment.html
@@ -11,6 +11,11 @@
 		<!-- <link rel="stylesheet" href="style2.css" th:href="@{style2.css}"> -->
 		<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<style>
+		.home-content .sales-boxes .recent-sales{
+		width : 100%;
+		}
+		</style>
 	</head>
 	<body>
         <div class="sidebar">
