--- a/src/main/resources/templates/patientBookAppointment.html
+++ b/src/main/resources/templates/patientBookAppointment.html
@@ -62,12 +62,11 @@
                         <hr>
                         <label style="color: black" >Doctor</label><br>
                         <div class="form-group">
-                            <select class="form-control" name="specialization"
-                                    id="docSpecialization">
-                                    <option value="Anesthesiologists">Anesthesiologists</option>
-                                    <option value="Cardiologists">Cardiologists</option>
-                                    <option value="Neurologists">Neurologists</option>
-                                    <option value="Radiologists">Radiologists</option>
+                            <select class="form-control" name="specialization" id="docSpecialization">
+	                            <option value="Anesthesiologists">Anesthesiologists</option>
+	                            <option value="Cardiologists">Cardiologists</option>
+	                            <option value="Neurologists">Neurologists</option>
+	                            <option value="Radiologists">Radiologists</option>
                             </select>
                         </div>
                                            
