admin login page done

--- a/src/main/resources/templates/adminLoginPage.html
+++ b/src/main/resources/templates/adminLoginPage.html
@@ -3,12 +3,10 @@
 <head>
 <meta charset="ISO-8859-1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
-		
-	</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	crossorigin="anonymous"></script>
+</script>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -61,6 +59,29 @@
 			</div>
 		</div>
 	</section>
+	<script>
+		function adminLoginPage() {
+
+			var canLogin = false;
+			var email = document.getElementById("adminEmail").value;
+			var password = document.getElementById("adminPassword").value;
+
+			if (email === "joy@capg.com" && password === "@qwerty") {
+				alert("Login Successful");
+				localStorage.setItem("admin", JSON.stringify({
+					name : "Joy",
+					email : "joy@joy.com",
+					password : "@qwerty",
+					role : "admin"
+				}));
+				window.location.href = "/admin", true;
+				document.forms['adminLoginForm'].reset();
+				return false;
+			} else {
+				alert("email or password incorrect, please try again");
+			}
+		}
+	</script>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
